More material design

--- a/frontend/src/gatekeeper/gatekeeper-display.css
+++ b/frontend/src/gatekeeper/gatekeeper-display.css
@@ -3,6 +3,7 @@
     display: flex;
     flex-direction: row;
     min-height: 100vh;
+    background: linear-gradient(125.1deg, rgba(165,34,86,1) 0%, rgba(102,21,86,1) 100%);
 }
 
 .clublogo-parent {
