--- a/frontend/src/gatekeeper/terplink-gatekeeper.css
+++ b/frontend/src/gatekeeper/terplink-gatekeeper.css
@@ -6,6 +6,10 @@
     background: linear-gradient(125.1deg, rgba(165,34,86,1) 0%, rgba(102,21,86,1) 100%);
 }
 
+body::-webkit-scrollbar {
+    display: none;
+}
+
 .clublogo-parent {
     width: 150px;
     height: 150px;
@@ -26,8 +30,20 @@
     font-size: 28px;
 }
 
+.gk-event img {
+    max-width: 100%;
+    padding: 16px;
+}
+
 .gk-terplink {
-    margin:32px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.gk-terplink p {
+    margin:0px;
 }
 
 .spacer { 
