--- a/frontend/src/gatekeeper/gatekeeper-scanner.css
+++ b/frontend/src/gatekeeper/gatekeeper-scanner.css
@@ -1,26 +1,35 @@
-#scanner {
-    width: "100%";
-    height: 300px;
-    background-color: black;
-    overflow: hidden;
-    align-items: center;
-    justify-content: center;
-    display: flex;
-}
-
-.scanner-paper {
+.scanner-bar {
     width: 400px;
-    height: 500px;
+    align-items: stretch;
     display: flex;
     overflow: hidden;
     flex-direction: column;
     text-align: center;
+    align-items: center;
+}
+
+.scanner-bar h4 {
+    font-size: 5em;
 }
 
 .scanner-status-bg {
     color: white;
     padding-top: 8px;
     padding-bottom: 8px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.scanner-status-icon {
+    width: 125px;
+    height: 125px;
+}
+
+.scanner-status-icon svg {
+    height: 100%;
+    width: auto;
 }
 
 .scanner-text {
@@ -29,4 +38,25 @@
     justify-content: center;
     flex: 1;
     color: white;
+    font-size: 3em;
+}
+
+.scanner-bg {
+    border-radius: 16px;
+    padding: 16px;
+    background-color: white;
+    width: 300px;
+    height: 300px;
+    display: flex;
+    align-items: stretch;
+    margin: 32px;
+}
+
+#scanner {
+    border-radius: 8px;
+    background-color: black;
+    overflow: hidden;
+    align-items: center;
+    justify-content: center;
+    display: flex;
 }
