--- a/frontend/src/gatekeeper/lab/lab-gatekeeper.css
+++ b/frontend/src/gatekeeper/lab/lab-gatekeeper.css
@@ -1,25 +1,25 @@
 .lab-gk-root {
     display: flex;
     flex-direction: row;
-    min-height: 100vh;
+    height: 100vh;
     background: #111111;
     color: white;
+    overflow: hidden;
+}
+
+.lab-gk-root .scanner-bar {
+    flex: 1;
 }
 
 .lab-info {
     padding: 32px;
-    display: flex;
-    flex: 1;
+    flex: 3.5;
     flex-direction: column;
+    align-items: stretch;
 }
 
 .lab-rules {
     margin-top: 48px;
-}
-
-.lab-gk {
-    width: 450px;
-    background-color: red;
 }
 
 .lab-header h1 {
@@ -28,7 +28,7 @@
     -webkit-text-fill-color: transparent;
     background-clip: text;
     font-weight: bold;
-    font-size: 9em;
+    font-size: 20vh;
     margin: 0;
     line-height: 1;
 }
@@ -54,18 +54,25 @@
 
 .lab-rules-group {
     display: flex;
-    flex-direction: row;
     text-align: center;
+    align-items: stretch;
+    align-content: flex-start;
+    justify-content: space-around;
     font-size: 2em;
+    max-height: 35vh;
+    gap: 2%
 }
+
+.lab-rules-group > .gradient-card {
+    aspect-ratio: 1 / 1;
+    flex: 1 0;
+
+}
+
 
 .lab-rules-group img {
     max-width: 80%;
 }
-
-.lab-rules-group > * {
-    margin-right: 32px;
- }
 
 #lab-title {
     margin: 16px;
