--- a/frontend/src/util/gradient-card.css
+++ b/frontend/src/util/gradient-card.css
@@ -1,7 +1,7 @@
 .gradient-card {
     background: linear-gradient(#a52256, #661556);
     border-radius: 16px;
-    justify-content: center;
+    justify-content: stretch;
     align-items: center;
     flex-direction: column;
     display: flex;
