Renaming and temp disable semaphore

--- a/src/components/gatekeeper/scanner/gatekeeper-scanner.css
+++ b/src/components/gatekeeper/scanner/gatekeeper-scanner.css
@@ -1,9 +1,40 @@
+:root {
+    --font-primary: 'Bahnschrift', sans-serif;
+    --font-secondary: 'Lato', sans-serif;
+    --xr-red: #e61a31;
+    --xr-purple: #661556;
+    --xr-cool-red: #a52256;
+    --xr-indigo: #4d1798;
+    --background-color: #000000;
+    --text-color: #ffffff;
+    --discord-blue: #5865F2;
+}
+
 .scanner-bar {
     overflow: hidden;
     flex-direction: column;
     text-align: center;
     align-items: center;
-    /* padding: 2%; */
+    max-width: 20%;
+    width: 20%;
+    height: 100%;
+}
+
+@keyframes gradient {
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
+}
+
+.xrc-gradient {
+    animation: gradient 2s ease infinite;
+    background: linear-gradient(-45deg, var(--xr-red), var(--xr-cool-red), var(--xr-purple), var(--xr-indigo));
 }
 
 .scanner-content {
@@ -13,7 +44,7 @@
     overflow: hidden;
     flex-direction: column;
     text-align: center;
-    align-items: center;
+    align-items: stretch;
 }
 
 .scanner-bar h4 {
